--- a/frontend-take-home-assignment-master/package.json
+++ b/frontend-take-home-assignment-master/package.json
@@ -7,7 +7,9 @@
     "acorn": "^7.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-components": "^4.4.1"
+    "react-text-mask": "^5.4.3",
+    "styled-components": "^4.4.1",
+    "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.5",
